--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.8.6",
     "nodemon": "^3.1.7",
-    "swagger-autogen": "^2.23.7"
+    "swagger-autogen": "^2.23.7",
+    "typescript": "^5.6.3"
   }
 }
