--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mongodb": "^6.9.0",
-    "swagger-ui-express": "^5.0.1"
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "swagger-ui-express": "^5.0.1",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
